--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>Data Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
   </head>
-  <body>
 
+  <body>
+    <header>
+      <nav>
+        <img src="./assets/images/logo-laboratoria.svg" alt="logo Laboratória">    
+        <select id="city-filter"></select>
+        <select id="class-year-filter"></select>
+      </nav>
+    </header>
+    
+    <section>
+      <div id="show-data"></div>
+
+
+
+
+
+
+
+
+
+    </section>
 		<!-- Base de datos -->
-		<script src="./js/data.js"></script>
+		<script src="js/data.js"></script>
 		<!-- Aquí va tus archivos JS -->
-    <script src="./js/app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
