--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <section>
   <div id="show-data"></div>
   <nav>
-  <ul>
+  <ul class="button-menu">
     <li><button class="button-menu">Dados Gerais</button></li>
     <li><button class="button-menu">Nota das Alunas</button></li>
     <li><button class="button-menu">Net Promoter Score(NPS)</button></li>
