--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <section>
   <nav>
     <ul class="button-menu">
-      <li><button class="button-menu">Dados Gerais</button></li>
-      <li><button class="button-menu">Nota das Alunas</button></li>
-      <li><button class="button-menu">Net Promoter Score(NPS)</button></li>
-      <li><button class="button-menu">Notas dos Mentores e Jedis</button></li>
+      <li><button class="button-menu1">Dados Gerais</button></li>
+      <li><button class="button-menu2">Nota das Alunas</button></li>
+      <li><button class="button-menu3">Net Promoter Score(NPS)</button></li>
+      <li><button class="button-menu4">Notas dos Mentores e Jedis</button></li>
     </ul>
   </nav>
 
